objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <formula>(Time_Out__c-Time_In__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_Card__c</fullName>
        <label>Time Card</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Time_Card__c.OwnerId</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Time_Card__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_In__c</fullName>
        <label>Time In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Out__c</fullName>
        <label>Time Out</label>
        <type>DateTime</type>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Hours_Worked_Not_Negative</fullName>
        <active>true</active>
        <description>Prevents Time Out form being before Time In</description>
        <errorConditionFormula>Hours_Worked__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Time_Out__c</errorDisplayField>
        <errorMessage>Time out has to be later than Time in</errorMessage>
    </validationRules>
</CustomObject>